ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-miniserv
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /                       # URL for routing
        pathType: Prefix
        backend:
          service:
            name: minisrv-service     # From the service definition
            port:
              number: 80              # External port from the outside of the cluster
  ingressClassName: nginx
